platform/policy/kyverno/tests/require-team-contact/namespace-app-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: team-contact-dev
  labels:
    app-dev: "true"
