platform/policy/kyverno/tests/require-team-contact/namespace-non-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: team-contact-non-dev
